thứ 3 ngày 27/05/2025 lần 02